--- a/group_class.ipynb
+++ b/group_class.ipynb
@@ -65,30 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([42278.52971883, 53720.26846316, 63133.16213515, 68704.49767028,\n",
-       "       69258.55522096, 64888.16182128, 56924.36936342, 47127.22625894,\n",
-       "       36979.41796856, 27724.06585313, 20121.39259966, 14125.23132275,\n",
-       "        9677.48795662,  6484.26972445,  4278.68264773,  2772.60484157])"
+       "array([241861.88980408, 259336.95058833, 255921.12244097, 230423.18217586,\n",
+       "       190041.68202873, 147937.51369203, 113785.16232496,  86306.61174274,\n",
+       "        60905.72361729,  41250.08174803,  28887.0375036 ,  18605.34722969,\n",
+       "        12444.65190134,   7810.85773264,   5187.20976531,   3180.51285008])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Pk_A_acc_map[2][3][5]"
+    "Pk_A_acc_map[2][3][10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
    ],
    "source": [
     "#plot the Pk_A_HICO comparison between different groups\n",
-    "COMPARISON_INDEX = [1, 3] # group number\n",
+    "COMPARISON_INDEX = [0, 2] # group number\n",
     "\n",
     "colorlist=['#845EC2', '#FF6F91', '#FF9671', '#FFC75F']; lslist = ['-', '--', '-.']\n",
     "dxHdz_plot_list = [0.255, 0.315, 0.375]\n",
@@ -164,6 +164,28 @@
     "axs[1, 0].invert_yaxis()\n",
     "#axs[1, 0].legend(loc=3, fontsize=10)\n",
     "fig.savefig('../figures/Pk_A_HICO_groupclass_compare%d%d_LEN%d.png'%(COMPARISON_INDEX[0], COMPARISON_INDEX[1], SMOOTHING_Pk), bbox_inches='tight', dpi=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.225, 0.235, 0.245, 0.255, 0.265, 0.275, 0.285, 0.295, 0.305,\n",
+       "       0.315, 0.325, 0.335, 0.345, 0.355, 0.365, 0.375, 0.385, 0.395,\n",
+       "       0.405, 0.415, 0.425, 0.435, 0.445])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linspace(0.225, 0.445, 23)"
    ]
   },
   {
